--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.romelapj.recipesapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,9 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.activities.RecipeActivity"
-            android:label="@string/title_activity_recipe"
+            android:name=".ui.activities.RecipeListActivity"
+            android:label="@string/title_recipe_list"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".ui.activities.RecipeDetailActivity"
+            android:label="@string/title_recipe_detail"
+            android:parentActivityName=".ui.activities.RecipeListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.romelapj.recipesapp.ui.activities.RecipeListActivity" />
+        </activity>
         <activity
             android:name=".ui.activities.MainActivity"
             android:label="@string/app_name"
